# rqtll-service

./: .gitmodules  Cargo.toml  LICENSE
src/: main.rs
src/services/: clone.rs  installer.rs  interactive_execution.rs  mod.rs  package.rs  workspace.rs
src/utils/: admin.rs  apt.rs  fs.rs
