[package]
name = "rqtll_rcl_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rqtll_api = { path = "external/rqtll-api" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
prost-types = "0.12"
bytes = "1.4"
sys-info = "0.9"

tokio-stream = "0.1"
uuid = { version = "1.4", features = ["v4"] }

notify = "5"
portable-pty = "0.9"


